// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`props should render active 1`] = `
<div
  aria-hidden="true"
  class="style-elevation style-has-hover style-has-active style-border-radius-inherit components-elevation"
  data-testid="elevation"
  data-wp-c16t="true"
  data-wp-component="Elevation"
  style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 7px 14px 0
	rgba(0, 0, 0, 0.35); --wp-components-elevation-hover-shadow: 0 14px 28px 0
	rgba(0, 0, 0, 0.7); --wp-components-elevation-active-shadow: 0 5px 10px 0
	rgba(0, 0, 0, 0.25);"
/>
`;

exports[`props should render correctly 1`] = `
<div
  aria-hidden="true"
  class="style-elevation style-border-radius-inherit components-elevation"
  data-testid="elevation"
  data-wp-c16t="true"
  data-wp-component="Elevation"
  style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 0px 0px 0
	rgba(0, 0, 0, 0);"
/>
`;

exports[`props should render hover 1`] = `
<div
  aria-hidden="true"
  class="style-elevation style-has-hover style-border-radius-inherit components-elevation"
  data-testid="elevation"
  data-wp-c16t="true"
  data-wp-component="Elevation"
  style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 7px 14px 0
	rgba(0, 0, 0, 0.35); --wp-components-elevation-hover-shadow: 0 14px 28px 0
	rgba(0, 0, 0, 0.7);"
/>
`;

exports[`props should render isInteractive 1`] = `
<div
  aria-hidden="true"
  class="style-elevation style-has-hover style-has-active style-border-radius-inherit components-elevation"
  data-testid="elevation"
  data-wp-c16t="true"
  data-wp-component="Elevation"
  style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 0px 0px 0
	rgba(0, 0, 0, 0); --wp-components-elevation-hover-shadow: 0 0px 0px 0
	rgba(0, 0, 0, 0); --wp-components-elevation-active-shadow: 0 0px 0px 0
	rgba(0, 0, 0, 0);"
/>
`;

exports[`props should render offset 1`] = `
<div
  aria-hidden="true"
  class="style-elevation style-has-hover style-has-active style-border-radius-inherit components-elevation"
  data-testid="elevation"
  data-wp-c16t="true"
  data-wp-component="Elevation"
  style="--wp-components-elevation-offset: -2px; --wp-components-elevation-shadow: 0 7px 14px 0
	rgba(0, 0, 0, 0.35); --wp-components-elevation-hover-shadow: 0 14px 28px 0
	rgba(0, 0, 0, 0.7); --wp-components-elevation-active-shadow: 0 5px 10px 0
	rgba(0, 0, 0, 0.25);"
/>
`;

exports[`props should render value 1`] = `
<div
  aria-hidden="true"
  class="style-elevation style-border-radius-inherit components-elevation"
  data-testid="elevation"
  data-wp-c16t="true"
  data-wp-component="Elevation"
  style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 7px 14px 0
	rgba(0, 0, 0, 0.35);"
/>
`;
